@@ -1,4 +1,9 @@
 #!/usr/bin/python2.4
+
+import sys
+
+sys.path.insert(0, "/usr/share/emma")
+
 import emmalib
 
 emmalib.start()
